1999-07-30  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* directory.m ([Directory -switchJavaEntry:javaObject:]): 
	Ensure map exists in new entry.
	([Directory -javaEnsureObjc:], [Directory -objcEnsureJava:]): 
	Allow nil objects.

	* directory.[hm]: Add swarm_directory_java_hash_code and companion
	method in DirectoryEntry.

	* DefObject.m ([Object_s -forward::]): Print more information
	about context when a selector is not found.

	* directory.m ([Directory -nextPhase:currentJavaPhase:]): 
	New method.
	([Directory -objcFindJavaClass:]): New method.
	([Directory -objcEnsureJava:]): Use it.

	* directory.[hm]: Rename Directory methods to make it more
	clear the semantics from their names.

1999-07-29  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* directory.[hm] (swarm_directory_get_swarm_class): Always
	define (revert to getClass when no JDK), move objc/objc.h
	before declarations.

1999-07-28  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* FCall.m ([FCall_c -getRetVal:buf:]): Use SD_SWITCHOBJC instead
	of JUPDATE.  Use SD_FINDOBJC instead of JFINDOBJC.

	* DefObject.m ([Object_s -forward::]): Accomodate J* to SD_* renames.

	* directory.[hm] (DirectoryEntry, Directory): New classes.
	Directory lookups on Java side are done using hashCode method
	to index into table of Maps.
	(jobject_id): Remove; use directory instances as avl entry.
	Rename all java_directory_* routines to swarm_directory_*. 
	Change all macros to use new Directoy methods. Accomodate J* to
	SD_* renames.
	Use find/add instead of ensure whenever possible.  Remove
	distinction between `update' and `switch' -- stick with switch
	predicated on valid reverse lookup.

1999-07-27  Vladimir Jojic  <vjojic@ute.santafe.edu>

	* directory.m: New global variables c_PhaseCImpl, 
	m_PhaseCImpl_copy_creating_phase_to_using_phase and
	f_nextPhase used in java_next_phase.
	(java_next_phase): Use global variables to invoke 
	copy_creating_phase_to_using_phase and get value of field
	nextPhase.
